@@ -2,7 +2,7 @@
 # BEGINNING OF SEPARATE COPYRIGHT MATERIAL vim: ft=config sw=4 noet nocindent
 # =============================================================================
 # 
-# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.30 $) $Date: 2007/08/14 07:26:44 $
+# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.31 $) $Date: 2007/11/06 10:16:37 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -47,7 +47,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2007/08/14 07:26:44 $ by $Author: brian $
+# Last Modified $Date: 2007/11/06 10:16:37 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -543,6 +543,9 @@ AC_DEFUN([_NETPERF_], [dnl
 # =============================================================================
 #
 # $Log: acinclude.m4,v $
+# Revision 0.9.2.31  2007/11/06 10:16:37  brian
+# - minor corrections
+#
 # Revision 0.9.2.30  2007/08/14 07:26:44  brian
 # - GPLv3 header update
 #
