@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: descrip.texi,v 0.9.2.5 2007/08/15 05:06:41 brian Exp $
+@c @(#) $Id: descrip.texi,v 0.9.2.6 2007/11/06 10:16:38 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,7 +53,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/08/15 05:06:41 $ by $Author: brian $
+@c Last Modified $Date: 2007/11/06 10:16:38 $ by $Author: brian $
 @c
 @c =========================================================================
 
