@@ -1,3 +1,8 @@
+2007-11-06  Brian Bidulock  <bidulock@openss7.org>
+
+	* acinclude.m4: corrected check
+	* manual/descrip.texi: typo
+
 2007-10-16  Brian Bidulock  <bidulock@openss7.org>
 
 	* configure.ac: fixed AC_FUNC_REALLOC cross-compile problem
